# vault

./: .gitignore  pyproject.toml
deploy/: hl-gridbot.service  setup.sh
docs/: DATA_ACCESS.md
docs/superpowers/plans/: 2026-06-27-trader-selection-pipeline.md
docs/superpowers/specs/: 2026-06-27-trader-selection-pipeline-design.md
reports/: gridbot-design.md  oos-verdict.md  target-strategy-analysis.md
scripts/: analyze_addresses.py  diagnose.py  pull_archive.py  run_backtest.py  run_neutral.py
src/hlvault/: __init__.py  backtest.py  cli.py  config.py  equity.py  factors.py  ingest.py  metrics.py  pipeline.py  prescreen.py  prices.py  reconstruct.py  report.py  select.py  types.py  universe.py  weights.py
src/hlvault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hlvault/gridbot/: __init__.py  allocator.py  backtest.py  config.py  exchange_utils.py  live.py  resilience.py  state.py  strategy.py  volatility.py
src/hlvault/io/: __init__.py  cache.py  (+3 more)
tests/: conftest.py  test_backtest_nolookahead.py  test_cache_asof.py  test_cli_smoke.py  test_config.py  test_equity.py  test_factors.py  test_gridbot_allocator.py  test_gridbot_backtest.py  test_gridbot_exchange_utils.py  test_gridbot_live_reconcile.py  test_gridbot_strategy.py  test_gridbot_volatility.py  test_ingest.py  test_metrics.py  test_pipeline.py  test_portfolio_betas.py  test_prescreen.py  test_prices.py  test_reconstruct.py  test_reconstruct_quality.py  test_report.py  test_s3_archive.py  test_select.py  test_source.py  test_universe.py  test_weights.py
