[project]
name = "hlvault"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0", "numpy>=1.24", "scipy>=1.10", "scikit-learn>=1.3",
  "statsmodels>=0.14", "pyarrow>=12", "boto3>=1.28", "pydantic>=2.5",
  "pydantic-settings>=2.1", "matplotlib>=3.7", "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
hl-vault = "hlvault.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
